# ecn-integ-project

./: .gitignore  LICENSE  README.md  arm.urdf.xacro  integ_description.tar.xz
.catkin_tools/profiles/default/: devel_collisions.txt
GKD_models/: RobotParam.yml  package.xml
GKD_models/scripts/: Dynamic.py  MGD.py  MGI.py
GKD_models/src/: Test_client.py
Motion_Planning/Trapezoidal/: CMakeLists.txt  CMakeLists.txt.autosave
Motion_Planning/Trapezoidal/include/: trapezoidalNode.h
Motion_Planning/Trapezoidal/src/: trapezoidal.cpp
Suivi_traj_EK/: CMakeLists.txt
image_processing/: README.md
image_processing/examples/: center_circle_detector.cpp  mass_center_detector.cpp
integ_description/urdf/: arm.urdf.xacro
integ_gazebo/launch/: arm.launch  description.launch
integ_gazebo/urdf/: arm.urdf.xacro
src/GKD_models/: CMakeLists.txt  RobotParam.yml
src/Motion_Planning/Trapezoidal/: CMakeLists.txt  README.md  TestsMotionPlanning.sh  package.xml
src/Motion_Planning/Trapezoidal/include/: trapezoidalNode.h
src/Motion_Planning/Trapezoidal/launch/: motion.launch
src/Motion_Planning/Trapezoidal/src/: trapezoidal.cpp  trapezoidalNode.cpp
src/Motion_Planning/Trapezoidal/srv/: WayPoint.srv
src/Suivi_traj_EK/: CMakeLists.txt  package.xml
src/Suivi_traj_EK/msg/: Commande.msg
src/Suivi_traj_EK/src/: CTC_controller.cpp  CTC_controller.cpp.autosave  PID_controller.cpp
src/gkd_models/: CMakeLists.txt  READ_ME.txt
src/gkd_models/scripts/: Dynamic.py  Kinematic.py  MGD.py  MGI.py  RobotParam.yml
src/gkd_models/src/: Test_client
src/integ_description/: README.md  package.xml
src/integ_description/launch/: rviz.launch
src/integ_description/urdf/: arm.urdf.xacro
src/integ_gazebo/launch/: arm.launch  cible.launch
src/integ_gazebo/params/: arm_control.yaml
src/reference_command/: CMakeLists.txt
src/reference_command/include/: calc.h
src/reference_command/src/: calc.cpp  main.cpp
src/suivi_traj/: CMakeLists.txt  package.xml
src/suivi_traj/include/: control_node.h  control_node_pid.h
src/suivi_traj/launch/: control_node_ctc.launch  control_node_pid.launch
src/suivi_traj/src/: control_node.cpp  control_node_pid.cpp  main_Finger.cpp  main_Hand.cpp  main_ctc.cpp
src/suivi_traj_ek/: CMakeLists.txt  Readme.txt  package.xml
src/suivi_traj_ek/src/: CTC_controller.cpp  PID_controller.cpp
src/yaml_identification_script/: CMakeLists.txt  main.cpp
