<?xml version="1.0"?>
<package>
  <name>Suivi_traj_EK</name>
  <version>0.0.1</version>
  <description>
    Trajectory tracking for INTEG project at Ecole Centrale de Nantes
    using PID and torque computed control
  </description>

  <maintainer email="moussa5198@gmail.com">Karim Moussa</maintainer>

  <license>MIT</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>GKD_models</build_depend>
  <build_depend>message_generation</build_depend>
  <build_depend>roscpp</build_depend>
  <run_depend>std_msgs</run_depend>
  <run_depend>GKD_models</run_depend>
  <run_depend>message_runtime</run_depend>
  <run_depend>roscpp</run_depend>
</package>
