<?xml version="1.0"?>
<package>
  <name>suivi_traj</name>
  <version>0.0.1</version>
  <description>The control package</description>
  
  <maintainer email="zeinab.awada@eleves.ec-nantes.fr">Zeinab AWADA</maintainer>


  <license>MIT</license>

	<buildtool_depend>catkin</buildtool_depend>
	<build_depend>gkd_models</build_depend>
	<build_depend>sensor_msgs</build_depend>
	<build_depend>roscpp</build_depend>
	<run_depend>gkd_models</run_depend>
	<run_depend>sensor_msgs</run_depend>
	<run_depend>roscpp</run_depend>
  <!-- The export tag contains other, unspecified, tags -->
  <export>
    <!-- Other tools can request additional information be placed here -->

  </export>
</package>
